# waste-classification

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_training.py
.github/workflows/: ci.yml
app/: app.py
notebooks/: exploration.ipynb
src/waste_classifier/: __init__.py  config.py  data.py  evaluate.py  inference.py  model.py  train.py
tests/: test_config.py
