[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-classifier"
version = "1.0.0"
description = "Binary waste classification (Organic vs Recyclable) using VGG16 transfer learning with fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Felipe Bojorquem"}]

dependencies = [
    "tensorflow>=2.16,<3",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
app = ["gradio>=4.40"]
dev = ["ruff", "pytest", "ipykernel", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
